--- a/electron/package.json
+++ b/electron/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lumiov",
-  "version": "1.3.0-rc.1",
+  "version": "1.2.0",
   "description": "Lumiov Kubernetes Manager",
   "author": "mtayabnoor",
   "main": "dist/electron/main.js",
