--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "frontend",
   "homepage": "./",
-  "version": "1.3.0-rc.1",
+  "version": "1.1.1",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.14.0",
