--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lumiov",
-  "version": "1.3.0-rc.1",
+  "version": "1.1.1",
   "description": "Lumiov Kubernetes Manager",
   "private": true,
   "type": "module",
