ci: Update release yml

--- a/.github/workflows/dependency-review.yml
+++ b/.github/workflows/dependency-review.yml
@@ -2,7 +2,9 @@ name: Dependency Review
 
 on:
   pull_request:
-    branches: [development, main]
+    branches:
+      - main
+      - development
 
 permissions:
   contents: read
