--- a/.github/workflows/deploy-website.yml
+++ b/.github/workflows/deploy-website.yml
@@ -2,7 +2,9 @@ name: Deploy Website
 
 on:
   push:
-    branches: [main]
+    branches:
+      - main
+      - development
     paths:
       - 'website/**'
   workflow_dispatch:
