--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,9 @@ name: CI
 
 on:
   pull_request:
-    branches: [development, main]
+    branches:
+      - main
+      - development
 
 concurrency:
   group: ci-${{ github.ref }}
