--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,3 +43,23 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
         run: npx semantic-release --ci
+
+  sync-dev:
+    name: Sync Dev After Stable Release
+    runs-on: ubuntu-latest
+    needs: release
+    if: github.ref == 'refs/heads/main'
+    steps:
+      - uses: actions/checkout@v6
+        with:
+          ref: development
+          fetch-depth: 0
+          token: ${{ secrets.RELEASE_TOKEN }}
+
+      - name: Merge main back into development
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git fetch origin main
+          git merge origin/main --no-ff --no-edit -m "chore: Merge main back into development after ${{ needs.finalize.outputs.tag }}"
+          git push origin development
