--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lumiov",
-  "version": "1.2.0-rc.1",
+  "version": "1.2.0",
   "description": "Lumiov Kubernetes Manager",
   "private": true,
   "type": "module",
@@ -21,8 +21,9 @@
     "package": "npm run build && cd electron && npm run package",
     "package:publish": "npm run build && cd electron && npm run package:publish",
     "clean": "rimraf electron/dist electron/release",
-    "release": "semantic-release",
-    "release:dry-run": "semantic-release --dry-run",
+    "release": "commit-and-tag-version --skip.bump --skip.commit --skip.tag",
+    "release:rc": "commit-and-tag-version --prerelease rc --skip.commit --skip.tag",
+    "release:dry-run": "commit-and-tag-version --dry-run",
     "prepare": "husky install",
     "commitlint": "commitlint --edit",
     "format": "prettier --write \".\"",
@@ -33,28 +34,17 @@
     "type-check:frontend": "cd frontend && npm run type-check",
     "type-check:backend": "cd backend && npm run type-check",
     "type-check:electron": "cd electron && npm run type-check",
-    "type-check:all": "npm run type-check:frontend && npm run type-check:backend && npm run type-check:electron",
-    "audit:frontend": "cd frontend && npm audit --omit=dev",
-    "audit:backend": "cd backend && npm audit --omit=dev",
-    "audit:electron": "cd electron && npm audit --omit=dev",
-    "audit:all": "npm audit --omit=dev && npm run audit:frontend && npm run audit:backend && npm run audit:electron"
+    "type-check:all": "npm run type-check:frontend && npm run type-check:backend && npm run type-check:electron"
   },
   "devDependencies": {
     "@commitlint/cli": "^20.4.2",
     "@commitlint/config-conventional": "^20.4.2",
-    "@semantic-release/changelog": "6.0.3",
-    "@semantic-release/commit-analyzer": "13.0.1",
-    "@semantic-release/exec": "7.1.0",
-    "@semantic-release/git": "10.0.1",
-    "@semantic-release/github": "12.0.6",
-    "@semantic-release/npm": "13.1.4",
-    "@semantic-release/release-notes-generator": "14.1.0",
+    "commit-and-tag-version": "12.6.1",
     "concurrently": "^8.2.0",
     "husky": "^9.0.0",
     "lint-staged": "16.2.7",
     "prettier": "3.8.1",
-    "rimraf": "^6.1.3",
-    "semantic-release": "25.0.3"
+    "rimraf": "^6.1.3"
   },
   "lint-staged": {
     "**/*.{ts,tsx,js,jsx,json,css,md}": [
